# rust-gol

./: Cargo.toml  LICENSE  README.md  pulsar.gol
src/: lib.rs  main.rs
