[package]
name = "gol"
version = "0.1.0"
authors = ["Matthew Baldwin <mgbaldwin@gmail.com>"]
edition = "2018"
description = "An implementation of Conway's Game of Life in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
tempus_fugit = "0.10"
